--- a/tapestry.css
+++ b/tapestry.css
@@ -7,6 +7,7 @@
     border-radius: 100%;
     opacity: 1;
     transition: all 2s;
+    transition-timing-function: ease-in;
     overflow: hidden;
 }
 
