Added @support to target i tag on mozilla

--- a/tapestry.css
+++ b/tapestry.css
@@ -85,6 +85,13 @@ text {
     box-shadow: 0 0 0 2px #666 inset;
 }
 
+@supports (-moz-appearance: inherit) {
+    i {
+        background-color: white;
+        padding-bottom: 1.5px;
+    }
+}
+
 .lightbox {
     background-color: rgba(0, 0, 0, 0.8);
     overflow: scroll;
