--- a/tapestry.css
+++ b/tapestry.css
@@ -66,6 +66,7 @@ body {
     height: 90vh;
     width: 90vw;
     z-index: 2;
+    background-color: #fff;
     background-position: 0 0;
     background-size: cover;
     border-radius: 100%;
