--- a/tapestry.css
+++ b/tapestry.css
@@ -60,20 +60,35 @@ body {
 }
 
 #spotlight-content {
-    position: fixed;
+    position: absolute;
     top: 5vh;
     left: 5vw;
     height: 90vh;
     width: 90vw;
     z-index: 2;
-    background-color: #fff;
     background-position: 0 0;
     background-size: cover;
-    border-radius: 100%;
     opacity: 1;
     transition: all 1s;
     transition-timing-function: ease-in;
-    overflow: hidden;
+}
+#spotlight-content[data-media-format=mp4] > * {
+    box-shadow: 0 0 800px #000;
+    background: #000;
+    width: 100%;
+    height: auto;
+}
+#spotlight-content[data-media-format=h5p] {
+    box-shadow: 0 0 800px #000;
+    background: #000;
+}
+
+#spotlight-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .progress-meter .background {
@@ -209,33 +224,6 @@ i {
     color: white;
     top: -22px;
     right: 3%;
-}
-
-.video-container {
-    padding-bottom: 56.25%;
-    position: relative;
-    overflow: hidden;
-    height: 0;
-    -webkit-backface-visibility: hidden;
-}
-
-.video-container video,
-.video-container iframe,
-.video-container object,
-.video-container embed {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    -webkit-backface-visibility: hidden;
-}
-
-.video-player {
-    width: 960px;
-    height: 540px;
-    frameborder: 0;
-    -webkit-backface-visibility: hidden;
 }
 
 #instructions-wrapper {
