--- a/tapestry.css
+++ b/tapestry.css
@@ -132,7 +132,7 @@ body {
 }
 
 .title {
-    font-size: 20px;
+    font-size: 13px;  /* original = 20px -ford */
     text-shadow: 1.5px 1.5px #333333;
 }
 
