--- a/tapestry.css
+++ b/tapestry.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    touch-action: none;
+    touch-action: none; /* mobile work around for dragging nodes - ford */
 }
 
 #header {
