--- a/tapestry.css
+++ b/tapestry.css
@@ -52,6 +52,10 @@ body {
     margin-top: 100px;
 }
 
+#tapestry-svg > g {
+    transform: translate(-8.5px, 0);
+}
+
 #footer {
     width: 100%;
     font-size: 0.7em;
@@ -71,16 +75,17 @@ body {
     opacity: 1;
     transition: all 1s;
     transition-timing-function: ease-in;
+    border: solid 1px #999;
+    border-radius: 40px;
+    overflow: hidden;
+}
+#spotlight-content > * {
+    background: #000;
+    outline: none;
 }
 #spotlight-content[data-media-format=mp4] > * {
-    box-shadow: 0 0 800px #000;
-    background: #000;
     width: 100%;
     height: auto;
-}
-#spotlight-content[data-media-format=h5p] {
-    box-shadow: 0 0 800px #000;
-    background: #000;
 }
 
 #spotlight-overlay {
