--- a/tapestry.css
+++ b/tapestry.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -58,7 +57,8 @@ body {
 }
 
 #header slider-wrapper {
-    display: inline-block;
+    position: relative;
+    padding-top: 100px;
 }
 
 .slider {
