--- a/tapestry.css
+++ b/tapestry.css
@@ -347,4 +347,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .dropdown {
     margin-top: 10px;
     margin-bottom: 10px;
+    /* padding: 0.65em 2.5em 0.55em 0.75em; */
+}
+
+#mediaType {
 }
