--- a/tapestry.css
+++ b/tapestry.css
@@ -276,3 +276,82 @@ i {
         right: 45px;
     }
 }
+
+/* Add new node form */
+
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+/* The popup form - hidden by default */
+.form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+    padding: 6%;
+    background-color: white;
+    margin: 0 auto;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=url] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+}
+
+#submit-add-new-node, #submit-edit-node {
+    color: white;
+}
+
+#cancel-add-new-node, #cancel-edit-node {
+    color: white;
+    background-color: #dc3545;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+    opacity: 1;
+}
+
+.dropdown #mediaType {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    width: 50%;
+    height: 30px;
+}
+
+.dropdown #mediaFormat {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    width: 50%;
+    height: 30px;
+}
