--- a/tapestry.css
+++ b/tapestry.css
@@ -359,3 +359,16 @@ body {font-family: Arial, Helvetica, sans-serif;}
     width: 50%;
     height: 30px;
 }
+
+/* Root Node button */
+#root-node-btn {
+    float: right;
+    margin-right: 5%;
+    cursor: pointer;
+}
+
+#root-node-btn:hover,
+#root-node-btn:active {
+    transform: scale(1.1);
+    color: #11a6d8;
+}
