--- a/tapestry.css
+++ b/tapestry.css
@@ -330,7 +330,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     opacity: 0.8;
 }
 
-#submit-add-new-node {
+#submit-add-new-node, #submit-add-root-node {
     color: white;
 }
 
