--- a/tapestry.css
+++ b/tapestry.css
@@ -339,6 +339,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
     background-color: #dc3545;
 }
 
+#add-node-error-msg {
+    color: #dc3545;
+    font-size: 15px;
+    margin-left: 4%;
+}
+
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
     opacity: 1;
