--- a/tapestry.css
+++ b/tapestry.css
@@ -57,26 +57,35 @@ body {
 }
 
 #header slider-wrapper {
-    position: relative;
+    position: absolute;
     padding-top: 100px;
+    padding-left: 100px;
+}
+
+#slider-wrapper {
+    padding-left: 10%;
+}
+
+.slider {
+    outline: none;
+    background: #d3d3d3;
+    height: 15px;
+    border-radius: 50%;
+    opacity: 0.7;
+    transition: opacity .2s;
 }
 
 .slider {
     -webkit-appearance: none;
-    outline: none;
-    background: #d3d3d3;
-    height: 15px;
-    border-radius: 5px;
-    opacity: 0.7;
-    transition: opacity .2s;
 }
 
 /* webkit support */
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
+    border: none;
     appearance: none;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%; 
     background: #ed7565;
     cursor: pointer;
@@ -85,8 +94,8 @@ body {
 /* mozilla support */
 .slider::-moz-range-thumb {
     border: none;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%; 
     background: #ed7565;
 }
@@ -94,8 +103,8 @@ body {
 /* internet explorer support */
 .slider::-ms-thumb {
     border: none;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%; 
     background: #ed7565;
 }
