--- a/tapestry.css
+++ b/tapestry.css
@@ -1,7 +1,5 @@
-
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    touch-action: none; /* mobile work around for dragging nodes - ford */
 }
 
 #header {
@@ -59,26 +57,56 @@ body {
 }
 
 #header slider-wrapper {
-    display: inline-block;
+    position: absolute;
+    padding-top: 100px;
+    padding-left: 100px;
+}
+
+#slider-wrapper {
+    padding-left: 10%;
+}
+
+.slider {
+    outline: none;
+    background: #d3d3d3;
+    height: 15px;
+    border-radius: 50%;
+    opacity: 0.7;
+    transition: opacity .2s;
 }
 
 .slider {
     -webkit-appearance: none;
-    outline: none;
-    background: #d3d3d3;
-    height: 15px;
-    border-radius: 5px;
-    opacity: 0.7;
-    transition: opacity .2s;
 }
+
+/* webkit support */
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
+    border: none;
     appearance: none;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%; 
     background: #ed7565;
     cursor: pointer;
+}
+
+/* mozilla support */
+.slider::-moz-range-thumb {
+    border: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #ed7565;
+}
+
+/* internet explorer support */
+.slider::-ms-thumb {
+    border: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #ed7565;
 }
 
 .slider:hover {
@@ -133,7 +161,7 @@ body {
 }
 
 .title {
-    font-size: 13px;  /* original = 20px -ford */
+    font-size: 15px;
     text-shadow: 1.5px 1.5px #333333;
 }
 
