--- a/tapestry.css
+++ b/tapestry.css
@@ -298,7 +298,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add styles to the form container */
 .form-container {
-    padding: 6%;
+    padding: 3%;
     background-color: white;
     margin: 0 auto;
 }
@@ -377,4 +377,56 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #root-node-btn:active {
     transform: scale(1.1);
     color: #11a6d8;
+}
+
+/* Permissions Labels */
+#permissions-details {
+    margin-top: 10%;
+}
+
+.permissions-label > div {
+    display: inline-block;
+}
+
+.permission-options > div {
+    display: inline-block;
+
+}
+
+#user-permissions-btn, #group-permissions-btn {
+    border-radius: 100px 100px 100px 100px;
+    color: white;
+}
+
+.permissions-btn-panel {
+    margin-top: 5%;
+}
+
+.permission-checkbox > div {
+    display: inline-block;
+}
+
+.permission-users > div {
+    display: inline-block;
+}
+
+.permissions-column-label {
+    width: 20%;
+}
+
+/* .permission-cell-item {
+    width: 10%;
+    margin-left: 1%;
+}
+
+.permission-cell-checkbox {
+    width: 10%;
+} */
+
+.permission-checkbox, .permission-options {
+    width: 70%;
+}
+
+.permissions-plus {
+    margin-right: 4px;
 }
