--- a/tapestry.css
+++ b/tapestry.css
@@ -384,15 +384,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
     margin-top: 10%;
 }
 
-.permissions-label > div {
-    display: inline-block;
-}
-
-.permission-options > div {
-    display: inline-block;
-
-}
-
 #user-permissions-btn, #group-permissions-btn {
     border-radius: 100px 100px 100px 100px;
     color: white;
@@ -402,31 +393,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
     margin-top: 5%;
 }
 
-.permission-checkbox > div {
-    display: inline-block;
-}
-
-.permission-users > div {
-    display: inline-block;
-}
-
-.permissions-column-label {
-    width: 20%;
-}
-
-/* .permission-cell-item {
-    width: 10%;
-    margin-left: 1%;
-}
-
-.permission-cell-checkbox {
-    width: 10%;
-} */
-
-.permission-checkbox, .permission-options {
-    width: 70%;
-}
-
 .permissions-plus {
     margin-right: 4px;
+}
+
+#permissions-details {
+    font-size: 15px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
 }
