Add logic for disable and enable checkboxes

--- a/tapestry.css
+++ b/tapestry.css
@@ -402,3 +402,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+input[class="public-checkbox"][disabled] {
+    cursor: not-allowed;
+}
