--- a/tapestry.css
+++ b/tapestry.css
@@ -403,6 +403,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
     font-family: Arial, Helvetica, sans-serif;
 }
 
-input[class="public-checkbox"][disabled] {
+input[type="checkbox"][disabled] {
     cursor: not-allowed;
 }
