--- a/tapestry.css
+++ b/tapestry.css
@@ -436,8 +436,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Root Node button */
 #root-node-btn {
-    float: right;
-    margin-right: 5%;
+    text-align: center;
     cursor: pointer;
 }
 
