Improve sizing and placement of nodes - Nodes don't appear super large or out of the viewport

--- a/tapestry.css
+++ b/tapestry.css
@@ -126,6 +126,10 @@ body {
     text-align:center;
 }
 
+div.modal {
+    top: 80px;
+}
+
 #spotlight-content {
     position: absolute;
     top: 5vh;
