--- a/tapestry.css
+++ b/tapestry.css
@@ -443,6 +443,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
     height: 30px;
 }
 
+#root-node-container {
+    padding-top: 40px;
+}
 /* Root Node button */
 #root-node-btn {
     text-align: center;
