--- a/tapestry.css
+++ b/tapestry.css
@@ -448,6 +448,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 /* Root Node button */
 #root-node-btn {
+    margin-top: 20vh;
     text-align: center;
     cursor: pointer;
 }
@@ -455,6 +456,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #root-node-label {
     text-align: center; 
     font-size: 1.5em;
+    padding-top: 10px;
 }
 
 #root-node-btn:hover,
