--- a/tapestry.css
+++ b/tapestry.css
@@ -443,8 +443,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
     height: 30px;
 }
 
+#root-node-container {
+    padding-top: 40px;
+}
 /* Root Node button */
 #root-node-btn {
+    margin-top: 20vh;
     text-align: center;
     cursor: pointer;
 }
@@ -452,6 +456,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #root-node-label {
     text-align: center; 
     font-size: 1.5em;
+    padding-top: 10px;
 }
 
 #root-node-btn:hover,
