--- a/tapestry.css
+++ b/tapestry.css
@@ -176,7 +176,7 @@ div.modal {
     fill: #11a6d8;
 }
 
-.title {
+.node .title {
     color: white;
     min-height: 100%;
     pointer-events: none;
@@ -185,8 +185,12 @@ div.modal {
     align-items: center;
     flex-direction:column;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     text-shadow: 1.5px 1.5px #333333;
+}
+.node .title p {
+    padding-left: 0;
+    margin: 15px 0;
 }
 
 .imageOverlay {
