--- a/tapestry.css
+++ b/tapestry.css
@@ -385,13 +385,13 @@ i {
     border-radius: 100%;
 }
 
- .linkNodeButton:hover,
+.linkNodeButton:hover,
 .linkNodeButton:active {
     transform: scale(1.15) translate(0, -21px);
     color: #11a6d8;
 }
 
- .linkNodeButton > i:not(.mediaButtonLoading) {
+ .linkNodeButton > i {
     font-size: 55px;
     background: #fff;
     border: solid 1px #fff;
