--- a/tapestry.css
+++ b/tapestry.css
@@ -401,6 +401,14 @@ body {font-family: Arial, Helvetica, sans-serif;}
     background: #f1f1f1;
 }
 
+/* Full-width input fields */
+.form-container textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0 22px 0;
+    background: #f1f1f1;
+}
+
 /* When the inputs get focus, do something */
 .form-container input[type=text]:focus, .form-container input[type=password]:focus {
     background-color: #ddd;
