--- a/tapestry.css
+++ b/tapestry.css
@@ -168,6 +168,44 @@ div.modal {
     height: 100%;
 }
 
+/* Text Node Styling */
+#text-node-paragraph-content {
+    position: absolute;
+    top: 5vh;
+    left: 5vw;
+    height: 90vh;
+    width: 90vw;
+    z-index: 100;
+    background-position: 0 0;
+    background-size: cover;
+    opacity: 1;
+    transition: all 1s;
+    transition-timing-function: ease-in;
+    border: solid 1px #999;
+    border-radius: 40px;
+    overflow: hidden;
+}
+
+#text-light-box-title {
+    height: 90px;
+    background-color: #3e5966;
+    margin-bottom: 30px;
+    position: relative;
+    color: white;
+}
+
+#text-light-box-title > p {
+    font-size: 42px;
+    color: #bdd6e0;
+    margin: 0;
+    line-height: 1em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 .progress-meter .background {
     fill: #333333;
 }
