Disable media type and format so users cant change it

--- a/tapestry.css
+++ b/tapestry.css
@@ -612,3 +612,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 input[type="checkbox"][disabled] {
     cursor: not-allowed;
 }
+
+#mediaFormat[disabled], #mediaType[disabled]{
+    cursor: not-allowed;
+}
