--- a/tapestry.css
+++ b/tapestry.css
@@ -144,6 +144,7 @@ div.modal {
     z-index: 100;
     background-position: 0 0;
     background-size: cover;
+    background-color: black;
     opacity: 1;
     transition: all 1s;
     transition-timing-function: ease-in;
@@ -166,6 +167,10 @@ div.modal {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+#node-description-text {
+    color: white;
 }
 
 .progress-meter .background {
@@ -503,6 +508,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #root-node-btn:active {
     transform: scale(1.1);
     color: #11a6d8;
+}
+
+.form-container textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0 22px 0;
+    background: #f1f1f1;
 }
 
 /* Permissions Labels */
