--- a/tapestry.css
+++ b/tapestry.css
@@ -279,7 +279,7 @@ div.modal {
     background-color: #dc3545;
 }
 
-#tapestry-submit-edit-node {
+#submit-edit-node {
     color: white;
 }
 
@@ -452,11 +452,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
     opacity: 0.8;
 }
 
-#tapestry-submit-add-new-node, #tapestry-submit-add-root-node {
+#submit-add-new-node, #submit-add-root-node {
     color: white;
 }
 
-#tapestry-cancel-add-new-node {
+#cancel-add-new-node {
     color: white;
     background-color: #dc3545;
 }
