--- a/tapestry.css
+++ b/tapestry.css
@@ -189,8 +189,13 @@ div.modal {
     height: 100%;
 }
 
-#tapestry-node-description-text {
+#tapestry-node-description-text[data-media-type=video] {
     color: white;
+}
+
+#tapestry-text-node-hr {
+    height: 100%;
+    border: 1px solid;
 }
 
 /* Text Node Styling */
