--- a/tapestry.css
+++ b/tapestry.css
@@ -515,7 +515,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     color: white;
 }
 
-#cancel-add-new-node {
+#cancel-add-new-node, #tapestry-delete-node {
     color: white;
     background-color: #dc3545;
 }
