Comment out description in footer because we're adding to sidebar now

--- a/tapestry.css
+++ b/tapestry.css
@@ -196,14 +196,15 @@ div.modal {
     height: 100%;
 }
 
-#tapestry-node-description-text[data-media-type=video] {
+/* comment out because we are adding the description to sidebar */
+/* #tapestry-node-description-text[data-media-type=video] {
     color: white;
 }
 
 #tapestry-text-node-hr {
     height: 100%;
     border: 1px solid;
-}
+} */
 
 /* Text Node Styling */
 #text-light-box-title > h3 {
