--- a/tapestry.css
+++ b/tapestry.css
@@ -547,6 +547,21 @@ body {font-family: Arial, Helvetica, sans-serif;}
     height: 30px;
 }
 
+#tapestry-new-parent {
+    padding: 10px;
+    padding-bottom: 10px;
+    font-size: 15px;
+    height: 30px;
+}
+
+.tapestry-submit-section {
+    float: right;
+}
+
+.tapestry-delete-node-section {
+    float:left;
+}
+
 #root-node-container {
     padding-top: 40px;
 }
