--- a/tapestry.css
+++ b/tapestry.css
@@ -151,7 +151,7 @@ div.modal {
     z-index: 100;
     background-position: 0 0;
     background-size: cover;
-    background-color: white;
+    background-color: black;
     opacity: 1;
     transition: all 1s;
     transition-timing-function: ease-in;
