--- a/tapestry.css
+++ b/tapestry.css
@@ -226,7 +226,7 @@ div.modal {
     fill: #11a6d8;
 }
 
-.node .title {
+.node .meta {
     color: white;
     min-height: 100%;
     pointer-events: none;
@@ -238,27 +238,15 @@ div.modal {
     font-size: 30px;
     text-shadow: 1.5px 1.5px #333333;
 }
-.node .title p {
+.node .title {
     padding-left: 0;
-    margin: 15px 0;
+    margin: 12px 0;
 }
 
 .node .timecode {
-    color: #a9a9a9;
-    min-height: 100%;
-    pointer-events: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction:column;
-    text-align: center;
     font-size: 20px;
-    text-shadow: -1px -1px 0 #072d42, 1px -1px 0 #072d42, -1px 1px 0 #072d42, 1px 1px 0 #072d42;
-}
-.node .timecode p {
-    padding-bottom: 30px;
-    padding-left: 5px;
-    margin: 15px 0;
+    padding-left: 0;
+    margin: 0;
 }
 
 .imageOverlay {
