--- a/tapestry.css
+++ b/tapestry.css
@@ -156,9 +156,7 @@ div.modal {
     transition: all 1s;
     transition-timing-function: ease-in;
     box-shadow: 0 0 100px -40px #000;
-    border: solid 1px #ddd;
     border-radius: 15px;
-    overflow: hidden;
 }
 
 #spotlight-content[data-view-mode=true] {
@@ -168,10 +166,13 @@ div.modal {
 
 #spotlight-content[data-media-type=text] {
     outline: none;
-    overflow: scroll;
     background: #eee;
     color: #333;
     padding: 1em;
+}
+
+#media-wrapper[data-media-type=text] {
+    overflow: scroll;
 }
 
 #spotlight-content > * {
@@ -180,6 +181,16 @@ div.modal {
 }
 
 #spotlight-content[data-media-format=mp4] > * {
+    width: 100%;
+    height: auto;
+}
+
+#media-wrapper {
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+#media-wrapper[data-media-format=mp4] > * {
     width: 100%;
     height: auto;
 }
@@ -413,19 +424,40 @@ i {
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.7);
 }
 
-.lightbox-close {
-    text-transform: uppercase;
+#lightbox-close-wrapper {
+    width: auto;
+    display: flex;
+    justify-content: flex-end;
     background: none;
-    position: absolute;
-    font-weight: 300;
-    font-size: 16px;
-    display: inline-block;
     border: none;
-    color: black;
-    top: 10px;
-    right: 2%;
-    text-align: right;
-    box-shadow: none;
+    outline: none;
+    position: absolute;
+    top: -17px;
+    right: -22px;
+}
+
+.lightbox-close {
+    background: #666;
+    color: white;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
+    transition: all 0.25s ease;
+    border: solid 2px #fff;
+}
+
+.lightbox-close:hover {
+    transform: scale(1.15);
+    background: #11a6d8;
+}
+
+.lightbox-close i {
+    background: none;
 }
 
 #instructions-wrapper {
