Allow having nodes without thumbnail * Use a solid color as background if no node thumbnail

--- a/tapestry.css
+++ b/tapestry.css
@@ -238,6 +238,9 @@ body {
 .imageOverlay {
     opacity: 0.5;
 }
+.imageOverlay--no-image {
+    opacity: 1;
+}
 
 .node .expandGrandchildren {
     fill: #999;
