--- a/tapestry.css
+++ b/tapestry.css
@@ -261,7 +261,7 @@ div.modal {
     fill: #11a6d8;
 }
 
-.node .title {
+.node .meta {
     color: white;
     min-height: 100%;
     pointer-events: none;
@@ -273,9 +273,16 @@ div.modal {
     font-size: 30px;
     text-shadow: 1.5px 1.5px #333333;
 }
-.node .title p {
+.node .title {
     padding-left: 0;
-    margin: 15px 0;
+    margin-top: 12px;
+    margin-bottom: 0;
+}
+
+.node .timecode {
+    font-size: 20px;
+    padding-left: 0;
+    margin: 0;
 }
 
 .imageOverlay {
