Finish deleting node feature

--- a/tapestry.css
+++ b/tapestry.css
@@ -315,6 +315,10 @@ body {
     stroke-opacity: 5;
 }
 
+.link-lines{
+    cursor: pointer;
+}
+
 /* MEDIA BUTTON */
 
 .mediaButton {
@@ -589,7 +593,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     color: white;
 }
 
-#cancel-add-new-node {
+#cancel-add-new-node, #tapestry-delete-node {
     color: white;
     background-color: #dc3545;
 }
