--- a/tapestry.css
+++ b/tapestry.css
@@ -338,22 +338,32 @@ body {
 .mediaButton {
     transition: all 0.25s ease;
     cursor: pointer;
-    color: #666666;
+    color: #fff;
     overflow: hidden;
-    border-radius: 100%;
+    background: #666;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    width: 55px;
+    height: 55px;
+    font-size: 32px;
+}
+
+.mediaButtonIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .mediaButton:hover,
 .mediaButton:active {
     transform: scale(1.15) translate(0, 21px);
-    color: #11a6d8;
+    background: #11a6d8;
 }
 
-.mediaButton > i:not(.mediaButtonLoading) {
-    font-size: 55px;
-    background: #fff;
-    border: solid 1px #fff;
-    padding: 2px;
+.mediaButtonIcon.fa-play:before {
+    font-size: 0.9em;
+    padding-left: 0.2em;
 }
 
 .mediaButton > i[data-media-type="text"]:not(.mediaButtonLoading) {
@@ -378,64 +388,12 @@ body {
     box-shadow: 0 0 0 2px #666 inset;
 }
 
-/* EDIT NODE BUTTON */
-.editNodeButton {
-    transition: all 0.25s ease;
-    cursor: pointer;
-    color: #666666;
-    overflow: hidden;
-    border-radius: 100%;
-    border: solid 4px #fff;
-}
-
+/* ADD + EDIT NODE BUTTONS */
 .editNodeButton:hover,
-.editNodeButton:active {
-    transform: scale(1.15) translate(0, -21px);
-    color: #11a6d8;
-}
-
-#cancel-edit-node {
-    color: white;
-    background-color: #dc3545;
-}
-
-#submit-edit-node {
-    color: white;
-}
-
-.editNodeButton > i {
-    font-size: 63px;
-    background: #fff;
-    border: solid 1px #fff;
-    padding: 2px;
-    margin: -8px 0 0 -5px;
-}
-
-/* ADD NODE BUTTON */
-.addNodeButton {
-    transition: all 0.25s ease;
-    cursor: pointer;
-    color: #666666;
-    overflow: hidden;
-    border-radius: 100%;
-}
-
-
+.editNodeButton:active,
 .addNodeButton:hover,
 .addNodeButton:active {
     transform: scale(1.15) translate(0, -21px);
-    color: #11a6d8;
-}
-.addNodeButton > i:not(.mediaButtonLoading) {
-    font-size: 55px;
-    background: #fff;
-    border: solid 1px #fff;
-    padding: 2px;
-}
-
-i {
-    background-color: white;
-    border-radius: 100%;
 }
 
 .lightbox {
